# tree-sitter-doxygen

./: CMakeLists.txt  Cargo.toml  Makefile  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/tree_sitter/: tree-sitter-doccomment.h
bindings/go/: binding_test.go
bindings/node/: index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_doccomment/: __init__.py
bindings/rust/: lib.rs
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: test.c
