[package]
name = "tree-sitter-doxygen"
description = "Doxygen, JSDoc, etc..."
version = "0.1.0"
authors = ["LAPORTE Clément <clem@etik.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "doxygen"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/clement-lap/tree-sitter-doxygen"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
